data for excel export, edit invitado and ADD new OK

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -83,7 +83,7 @@
 
                             <span *ngIf="column.export">
 
-                                {{ element.dataImport[0][column.name] }
+                                {{ element.dataImport[0][column.name] }}
           
             </span>
         
