--- a/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
+++ b/src/app/main/apps/contacts/selected-bar/selected-bar.component.html
@@ -1,8 +1,8 @@
 <div class="center content p-24 pb-56 pr-sm-92 " fusePerfectScrollbar>
 
-<div *ngIf="btnDisplay" fxFlex fxLayout="row" fxLayoutAlign="start center" class="p-24">
+<div *ngIf="btnDisplay" fxFlex fxLayout="row" fxLayoutAlign="start center" class="p-24 margin">
 
-    <div class="close-button-wrapper" fxFlex="0 1 auto" fxFlex.gt-sm="220px" (click)="deselectAll()">
+    <div class="close-button-wrapper " fxFlex="0 1 auto" fxFlex.gt-sm="220px" (click)="deselectAll()">
         <button class="p-8" mat-button fxLayout="row" fxLayoutAlign="start center">
             <mat-icon class="mr-8">arrow_back</mat-icon>
             <span class="text-uppercase">Atrás</span>
