--- a/src/app/main/apps/contacts/contact-list/dialog/select-fields/select-fields.component.html
+++ b/src/app/main/apps/contacts/contact-list/dialog/select-fields/select-fields.component.html
@@ -17,7 +17,7 @@
     <!-- CONTENT -->
     <div class="content p-24" >
 
-        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+        <div fxLayout="row wrap margin-field" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
             <mat-form-field appearance="outline" fxFlex="100">
 
