--- a/src/app/main/apps/contacts/contact-form/contact-form.component.scss
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.scss
@@ -62,3 +62,11 @@
 
     width: 50%;
 }
+
+.margin-form {
+
+    @include media-breakpoint('xs') {
+        margin: 20px -50px 0px -20px;
+    }
+  
+}
