--- a/src/app/main/apps/contacts/selected-bar/selected-bar.component.scss
+++ b/src/app/main/apps/contacts/selected-bar/selected-bar.component.scss
@@ -13,6 +13,10 @@
 
 .margin {
 
-    margin: 20px 20px 17px 0px;
+   
+
+    @include media-breakpoint('xs') {
+        margin: 20px 20px 17px 0px;
+    }
 }
 
