--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -71,8 +71,8 @@
                     *ngFor="let column of _contactsService.initColumns; index as i" >
 
                     <span>
-                        <mat-header-cell  *matHeaderCellDef mat-sort-header [fxHide.xs]="column.export">{{column.title}}</mat-header-cell>
-                        <mat-cell *matCellDef="let element" [fxHide.xs]="column.export">
+                        <mat-header-cell  *matHeaderCellDef mat-sort-header [fxHide.xs]="column.import">{{column.title}}</mat-header-cell>
+                        <mat-cell *matCellDef="let element" [fxHide.xs]="column.import">
 
                             <span *ngIf="column.checkbox">
                                 <mat-checkbox [(ngModel)]="checkboxes[element._id]"
@@ -81,7 +81,7 @@
 
                             </span>
 
-                            <span *ngIf="column.export">
+                            <span *ngIf="column.import">
 
                                 {{ element.dataImport[0][column.name] }}
           
