por fin csm gracias a dios

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -416,3 +416,11 @@ contacts-contact-list {
     background-color: white !important;
 
 }
+
+.obj-valid {
+    background-color: #039be530 !important;
+}
+
+.obj-invalid {
+    background-color: #ff8d8f73 !important;
+}
