--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -70,7 +70,7 @@
                 <ng-container [matColumnDef]="column.name"
                     *ngFor="let column of _contactsService.initColumns; index as i" >
 
-                    <span>
+                    <span >
                         <mat-header-cell  *matHeaderCellDef mat-sort-header [fxHide.xs]="column.import">{{column.title}}</mat-header-cell>
                         <mat-cell *matCellDef="let element" [fxHide.xs]="column.import">
 
@@ -82,10 +82,8 @@
                             </span>
 
                             <span *ngIf="column.import">
-
                                 {{ element.dataImport[0][column.name] }}
-          
-            </span>
+                            </span>
         
 
             <span *ngIf="column.contact">
@@ -155,7 +153,10 @@
     
 
     
-    <mat-row *matRowDef="let contact; columns: displayedColumns;"
+    <mat-row  [ngClass]="{ 
+        'obj-valid': contact.emailValid,
+        'obj-invalid': !contact.emailValid
+    }" *matRowDef="let contact; columns: displayedColumns;"
              class="contact"
              (click)="editContact(contact)"
              [ngClass]="{'accent-50':checkboxes[contact._id]}"
