all inputs in invited to CREATED

--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -67,7 +67,7 @@
                         <form class="form-custom mr-24 form-margin" fxLayout="column" fxLayoutAlign="start"
                             fxFlex="1 0 auto" name="productForm" [formGroup]="productForm">
 
-                            <div class="h2 mb-16">Ingrese información general</div>
+                            <div class="h2 mb-16">Información general</div>
 
                             <mat-form-field appearance="outline" fxFlex fxFlex="100" class="pl-4" class="container">
                                 <mat-label>Imagen</mat-label>
