fix design add empty image campiangs

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -131,8 +131,10 @@
 
 
             <div class="no-courses" *ngIf="!_campaignService.loadingCampaigns && filteredCourses.length === 0">
-                No se encontraron campañas
+
+                <img class="empty-campaign" src="assets/images/emptyCampaigns.jpg" [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
             </div>
+
 
 
                                     
