--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -116,9 +116,7 @@ products-campaigns {
     
 
         .courses {
-            width: 100%;
-            height: 500px;
-            max-width: 1040px;
+
             margin: 0 auto;
 
 
@@ -227,6 +225,16 @@ products-campaigns {
 
 .content-card {
     padding: 16px;
+}
+
+.empty-campaign {
+    width: 100%;
+
+    max-width: 100%;
+  
+
+
+   
 }
 
 
