--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -182,17 +182,6 @@
 
                     </mat-tab>
 
-                    <mat-tab label="Formulario" [disabled]='!isCreated'>
-
-
-                        <div fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto">
-
-                            <form-custom></form-custom>
-
-
-                        </div>
-                    </mat-tab>
-
                     <mat-tab label="Campañas" [disabled]='!isCreated'>
 
 
@@ -205,6 +194,19 @@
 
 
                     </mat-tab>
+
+                    <mat-tab label="Invitación" [disabled]='!isCreated'>
+
+
+                        <div fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto">
+
+                            <form-custom></form-custom>
+
+
+                        </div>
+                    </mat-tab>
+
+
 
                     <mat-tab label="Usuarios" [disabled]='!isCreated'>
 
