--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -129,6 +129,7 @@ products-campaigns {
             }
 
             .course {
+                flex: none !important;
                 padding: 16px;
 
                 &:hover {
