--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.html
@@ -59,7 +59,7 @@
 
             <mat-form-field appearance="outline"  fxFlex="50" class="pr-4">
                 <mat-label>Email remitente</mat-label>
-                <input formControlName="sender" matInput>
+                <input formControlName="sender" type="email" matInput>
                 <mat-icon matSuffix class="secondary-text">email</mat-icon>
             </mat-form-field>
 
