--- a/src/app/main/apps/academy/dialog/add/add.component.html
+++ b/src/app/main/apps/academy/dialog/add/add.component.html
@@ -40,7 +40,7 @@
 
         <mat-form-field appearance="outline" fxFlex="100">
             <mat-label>Email</mat-label>
-            <input name="email" formControlName="email" matInput required >
+            <input name="email" type="amail" formControlName="email" matInput required >
             <mat-icon matSuffix class="secondary-text">email</mat-icon>
 
             <mat-error >
