--- a/src/app/main/pages/authentication/register-2/register-2.component.html
+++ b/src/app/main/pages/authentication/register-2/register-2.component.html
@@ -41,7 +41,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input matInput formControlName="email">
+                    <input matInput type="email" formControlName="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="registerForm.get('email').hasError('required')">
                         Email is required
